# frank

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/api/: mod.rs  queue.rs  songs.rs
backend/src/song/: indexer.rs  mod.rs  parser.rs  types.rs  validator.rs
frontend/: biome.jsonc  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/audio/: AudioEngine.ts  MicrophoneManager.ts  PitchDetector.ts  index.ts
frontend/src/components/: KeyboardShortcutsModal.tsx
frontend/src/components/audio/: MicSettingsModal.tsx  MicrophoneSetup.tsx  index.ts
frontend/src/components/game/: LyricsDisplay.tsx  PitchTrack.tsx  ProgressBar.tsx  ScoreDisplay.tsx  VideoBackground.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/songs/: SongCard.tsx  SongCarousel.tsx  SongDetailsModal.tsx  SongList.tsx  SongSearch.tsx  index.ts
frontend/src/constants/: playerColors.ts
frontend/src/game/: GameEngine.ts  NoteTracker.ts  Scorer.ts  index.ts  types.ts
frontend/src/hooks/: index.ts  useGame.ts  usePreview.ts
frontend/src/pages/: GamePage.tsx  HomePage.tsx  ResultsPage.tsx  SonglistPage.tsx  index.ts
frontend/src/stores/: audioStore.ts  gameStore.ts  index.ts  songStore.ts
frontend/src/utils/: index.ts  pitchUtils.ts  timeUtils.ts
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs
